# ask-a-human

./: .gitignore  HOWTO.md  README.md  README_HUMANS.md
.cursor/plans/: 2026-02-02-1_terraform_foundation_setup_ab0be3dc.plan.md  2026-02-02-2_minimal_working_api_a882477d.plan.md  2026-02-02-3_python_developer_tooling_c35c4f02.plan.md
.cursor/rules/: project-context.mdc
.github/workflows/: backend-code-quality.yml  backend-tests.yml  frontend-code-quality.yml  frontend-tests.yml  sdk-python-code-quality.yml  sdk-python-publish.yml  sdk-python-tests.yml  sdk-typescript-code-quality.yml  sdk-typescript-publish.yml  sdk-typescript-tests.yml
backend-app/: Makefile  README.md  pyproject.toml  requirements.txt
backend-app/src/: __init__.py
backend-app/src/handlers/: __init__.py  agent_questions.py  human_api.py
backend-app/src/models/: __init__.py  question.py  response.py
backend-app/src/utils/: api_response.py  dynamodb.py
backend-app/tests/: __init__.py  conftest.py
backend-app/tests/handlers/: __init__.py  test_agent_questions.py  test_human_api.py
backend-app/tests/models/: test_question.py  test_response.py
deployment/: README.md  deploy-backend.sh  deploy-frontend.sh  deploy.sh
deployment/lib/: aws-auth.sh
examples/content-writer-agent/: README.md  agent.py  main.py  prompts.py  requirements.txt
examples/question-seeder/: README.md  requirements.txt  seeder.py
examples/typescript-content-writer/: .env.example  README.md  package-lock.json  package.json  tsconfig.json
examples/typescript-content-writer/src/: agent.ts  main.ts  prompts.ts
frontend-app-web/: .env.production  .prettierrc  Makefile  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
frontend-app-web/coverage/: index.html  lcov.info
frontend-app-web/coverage/lcov-report/: index.html
frontend-app-web/coverage/lcov-report/src/: App.tsx.html  index.html
frontend-app-web/coverage/src/: App.tsx.html  index.html
frontend-app-web/coverage/src/api/: client.ts.html  index.html
frontend-app-web/coverage/src/components/: Button.tsx.html  Card.tsx.html  EmptyState.tsx.html  ErrorMessage.tsx.html  Header.tsx.html  LoadingSpinner.tsx.html  QuestionCard.tsx.html  index.html
frontend-app-web/coverage/src/context/: ThemeContext.tsx.html  index.html
frontend-app-web/coverage/src/hooks/: index.html  useQuestion.ts.html  useQuestions.ts.html  useSubmitResponse.ts.html
frontend-app-web/coverage/src/pages/: AnswerQuestion.tsx.html  Confirmation.tsx.html  Feed.tsx.html  Settings.tsx.html  index.html
frontend-app-web/coverage/src/types/: api.ts.html  index.html
frontend-app-web/src/: App.test.tsx  App.tsx  index.css  main.tsx
frontend-app-web/src/api/: client.test.ts  client.ts
frontend-app-web/src/components/: Button.test.tsx  Button.tsx  Card.test.tsx  Card.tsx  EmptyState.test.tsx  EmptyState.tsx  ErrorMessage.test.tsx  ErrorMessage.tsx  Header.tsx  InfoBanner.tsx  LoadingSpinner.tsx  QuestionCard.test.tsx  QuestionCard.tsx
frontend-app-web/src/context/: ThemeContext.tsx
frontend-app-web/src/hooks/: useQuestion.test.ts  useQuestion.ts  useQuestions.test.ts  useQuestions.ts  useSubmitResponse.test.ts  useSubmitResponse.ts
frontend-app-web/src/pages/: AnswerQuestion.test.tsx  AnswerQuestion.tsx  Confirmation.test.tsx  Confirmation.tsx  Feed.test.tsx  Feed.tsx  Settings.test.tsx  Settings.tsx
frontend-app-web/src/test/: setup.ts
frontend-app-web/src/types/: api.ts
infrastructure/docs/: firebase-sdk.sample.js
infrastructure/scripts/: aws-assume-role.sh  aws-whoami.sh  deploy-frontend.sh
infrastructure/terraform/: README.md
infrastructure/terraform/environments/prod/: main.tf  outputs.tf  terraform.tfvars  variables.tf
infrastructure/terraform/modules/api/: main.tf  outputs.tf  variables.tf
infrastructure/terraform/modules/database/: main.tf  outputs.tf  variables.tf
infrastructure/terraform/shared/: backend.tf
integrations/openclaw/: SKILL.md
mcp-server/: README.md  pyproject.toml
mcp-server/config/: cursor.example.json
mcp-server/src/ask_a_human_mcp/: __init__.py  __main__.py  server.py  tools.py
planning/architectural-decision-records/: 01-system-architecture.md  02-database-schema.md  03-api-design.md  04-push-notifications.md  05-abuse-prevention.md  06-infrastructure-as-code.md  07-agent-integration-patterns.md
planning/fundamentals/: 00-initial-brainstorming.md  01-available-infrastructure-accounts-and-services.md
planning/guides/: agent-integration-guide.md  openclaw-integration.md
planning/memory/: README.md  conventions.md  gotchas.md  learnings.md
planning/product-requirements-document/: 01-human-web-app.md  02-agent-api.md  03-gamification.md  04-question-lifecycle.md
planning/tasks/: task-management.md
planning/tasks/done/: 00-sample-done.md  01-terraform-foundation-and-dynamodb.md  02-minimal-working-api.md  03-python-developer-tooling.md  04-minimal-working-frontend.md  05-frontend-subdomain-migration.md  06-agent-sdk-and-examples.md  07-typescript-sdk-and-examples.md  08-openclaw-integration.md
planning/tasks/in-progress/: 00-sample-in-progress.md
planning/tasks/todo/: 00-sample-todo.md  01-terraform-foundation-and-dynamodb.md  02-minimal-working-api.md  03-python-developer-tooling.md  06-agent-sdk-and-examples.md  07-typescript-sdk-and-examples.md
sdk-python/: Makefile  README.md  pyproject.toml
sdk-python/examples/: basic_usage.py  multi_question.py
sdk-python/src/ask_a_human/: __init__.py  client.py  exceptions.py  orchestrator.py  types.py
sdk-python/tests/: __init__.py  conftest.py  test_client.py  test_orchestrator.py
sdk-typescript/: .gitignore  Makefile  README.md  eslint.config.js  package-lock.json  package.json  tsconfig.json  tsup.config.ts  vitest.config.ts
sdk-typescript/examples/: basic-usage.ts  multi-question.ts
sdk-typescript/src/: client.ts  errors.ts  index.ts  orchestrator.ts  types.ts
sdk-typescript/tests/: client.test.ts  orchestrator.test.ts
(+29 files in other folders)
