[project]
name = "ask-a-human-mcp"
version = "0.1.0"
description = "MCP tool server for Ask-a-Human - get human input in Cursor and Claude Desktop"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
keywords = ["mcp", "ai", "agents", "human-in-the-loop", "cursor", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "ask-a-human>=0.1.0",
    "mcp>=1.0.0",
    "anyio>=4.0",
    "click>=8.0",
]

[project.optional-dependencies]
sse = [
    "starlette>=0.27",
    "uvicorn>=0.24",
]
dev = [
    "pytest>=8.0",
    "black>=24.0",
    "ruff>=0.2",
    "mypy>=1.8",
]

[project.scripts]
ask-a-human-mcp = "ask_a_human_mcp:main"

[project.urls]
Homepage = "https://ask-a-human.com"
Documentation = "https://ask-a-human.com/docs"
Repository = "https://github.com/dx-tooling/ask-a-human"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

# Black - Code Formatter
[tool.black]
line-length = 120
target-version = ["py311", "py312", "py313"]

# mypy - Static Type Checking
[tool.mypy]
python_version = "3.11"
strict = true

# Ruff - Linting
[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "B", "C4"]
