[project]
name = "ask-a-human"
version = "0.1.0"
description = "Python SDK for Ask-a-Human - get human input for your AI agents"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
keywords = ["ai", "agents", "human-in-the-loop", "llm", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "pytest-httpx>=0.30",
    "black>=24.0",
    "isort>=5.13",
    "ruff>=0.2",
    "mypy>=1.8",
]

[project.urls]
Homepage = "https://ask-a-human.com"
Documentation = "https://ask-a-human.com/docs"
Repository = "https://github.com/dx-tooling/ask-a-human"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

# Black - Code Formatter
[tool.black]
line-length = 120
target-version = ["py311", "py312", "py313"]

# isort - Import Sorting
[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

# mypy - Static Type Checking
[tool.mypy]
python_version = "3.11"
strict = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["httpx.*"]
ignore_missing_imports = true

# Ruff - Linting
[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # Pyflakes
    "C90",  # McCabe complexity
    "I",    # isort
    "N",    # pep8-naming
    "A",    # flake8-builtins
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "D",    # flake8-docstrings
    "EM",   # flake8-errmsg
    "SIM",  # flake8-simplify
    "ARG",  # flake8-unused-arguments
    "PT",   # flake8-pytest-style
    "PTH",  # flake8-use-pathlib
]
ignore = [
    "D203",  # one-blank-line-before-class (conflicts with D211)
    "D212",  # multi-line-summary-first-line (conflicts with D213)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D100", "D103", "D104", "ARG001"]
"examples/**/*.py" = ["D100", "D103", "D104"]

# pytest - Testing
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
filterwarnings = [
    "ignore::DeprecationWarning",
]

# Coverage
[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__init__.py"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
